--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,118 @@
-django
-django-crispy-forms
-whitenoise
-pytz
-django-cors-headers
+aiosqlite==0.19.0
+alembic==1.12.1
+annotated-types==0.6.0
+anyio==3.7.1
+apprise==1.6.0
+asgi-lifespan==2.1.0
+asgiref==3.7.2
+asyncpg==0.28.0
+attrs==23.1.0
+cachetools==5.3.2
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+cloudpickle==2.2.1
+colorama==0.4.6
+coolname==2.2.0
+croniter==1.4.1
+cryptography==41.0.3
+dateparser==1.1.8
+Django==4.2.4
+django-cors-headers==4.3.1
+dnspython==2.4.2
+docker==6.1.3
+email-validator==2.1.0.post1
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+fsspec==2023.10.0
+google-auth==2.23.3
+graphviz==0.20.1
+greenlet==3.0.1
+griffe==0.36.9
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.18.0
+httpx==0.25.0
+hyperframe==6.0.1
+idna==3.4
+jellyfish==0.11.2
+Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+kubernetes==28.1.0
+lib50==3.0.7
+Mako==1.2.4
+Markdown==3.5
+markdown-it-py==3.0.0
+markdown2==2.4.10
+MarkupSafe==2.1.3
+mdurl==0.1.2
+numpy==1.26.1
+oauthlib==3.2.2
+openpyxl==3.1.2
+orjson==3.9.10
+outcome==1.2.0
+packaging==23.2
+pandas==2.1.2
+pathspec==0.11.2
+pendulum==2.1.2
+petl==1.7.14
+pexpect==4.8.0
+Pillow==10.0.0
+prefect==2.14.2
+ptyprocess==0.7.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+Pygments==2.16.1
+pymssql==2.2.9
+pyodbc==5.0.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-slugify==8.0.1
+pytz==2023.3.post1
+pytzdata==2020.1
+pywin32==306
+PyYAML==6.0.1
+readchar==4.0.5
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.6.0
+rpds-py==0.10.6
+rsa==4.9
+ruamel.yaml==0.18.2
+ruamel.yaml.clib==0.2.8
+selenium==4.12.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.22
+sqlparse==0.4.4
+starlette==0.27.0
+submit50==3.1.1
+tabulate==0.9.0
+termcolor==1.1.0
+text-unidecode==1.3
+toml==0.10.2
+trio==0.22.2
+trio-websocket==0.10.4
+typer==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+ujson==5.8.0
+urllib3==1.26.18
+uvicorn==0.23.2
+websocket-client==1.6.4
+websockets==11.0.3
+wget==3.2
+whitenoise==6.6.0
+wsproto==1.2.0
