--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ petl==1.7.14
 pexpect==4.8.0
 Pillow==10.0.0
 prefect==2.14.2
+psycopg2==2.9.9
 ptyprocess==0.7.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
