--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aenum==3.1.15
+ai-api-client-sdk==1.28.0
+ai-core-sdk==1.22.3
 aiosqlite==0.19.0
 alembic==1.12.1
 annotated-types==0.6.0
@@ -5,23 +8,29 @@ anyio==3.7.1
 apprise==1.6.0
 asgi-lifespan==2.1.0
 asgiref==3.7.2
+astroid==2.11.7
 asyncpg==0.28.0
 attrs==23.1.0
+awscli==1.22.101
+boto3==1.21.46
+botocore==1.24.46
 cachetools==5.3.2
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
-click==8.1.7
+click==8.0.4
 cloudpickle==2.2.1
-colorama==0.4.6
+colorama==0.4.3
 coolname==2.2.0
 croniter==1.4.1
 cryptography==41.0.3
 dateparser==1.1.8
+dill==0.3.7
 Django==4.2.4
 django-cors-headers==4.3.1
 dnspython==2.4.2
 docker==6.1.3
+docutils==0.15.2
 email-validator==2.1.0.post1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
@@ -37,20 +46,25 @@ httpcore==0.18.0
 httpx==0.25.0
 hyperframe==6.0.1
 idna==3.4
+isort==5.13.2
 jellyfish==0.11.2
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
+lazy-object-proxy==1.10.0
 lib50==3.0.7
 Mako==1.2.4
 Markdown==3.5
 markdown-it-py==3.0.0
 markdown2==2.4.10
 MarkupSafe==2.1.3
+mccabe==0.7.0
 mdurl==0.1.2
+metaflow==2.8.0
 numpy==1.26.1
 oauthlib==3.2.2
 openpyxl==3.1.2
@@ -63,6 +77,7 @@ pendulum==2.1.2
 petl==1.7.14
 pexpect==4.8.0
 Pillow==10.0.0
+platformdirs==4.1.0
 prefect==2.14.2
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
@@ -73,15 +88,18 @@ pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
+pyhumps==3.8.0
+pylint==2.14.2
 pymssql==2.2.9
 pyodbc==5.0.1
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 python-slugify==8.0.1
 pytz==2023.3.post1
 pytzdata==2020.1
 pywin32==306
-PyYAML==6.0.1
+PyYAML==5.4.1
 readchar==4.0.5
 referencing==0.30.2
 regex==2023.10.3
@@ -89,9 +107,11 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rich==13.6.0
 rpds-py==0.10.6
-rsa==4.9
+rsa==4.7.2
 ruamel.yaml==0.18.2
 ruamel.yaml.clib==0.2.8
+s3transfer==0.5.2
+sap-ai-core-metaflow==1.1.14
 selenium==4.12.0
 six==1.16.0
 sniffio==1.3.0
@@ -104,6 +124,7 @@ tabulate==0.9.0
 termcolor==1.1.0
 text-unidecode==1.3
 toml==0.10.2
+tomlkit==0.12.3
 trio==0.22.2
 trio-websocket==0.10.4
 typer==0.9.0
@@ -117,4 +138,5 @@ websocket-client==1.6.4
 websockets==11.0.3
 wget==3.2
 whitenoise==6.6.0
+wrapt==1.16.0
 wsproto==1.2.0
