--- a/requirements.txt
+++ b/requirements.txt
@@ -52,11 +52,11 @@ Jinja2==3.1.2
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.19.1
+# jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
 lazy-object-proxy==1.10.0
-lib50==3.0.7
+# lib50==3.0.7
 Mako==1.2.4
 Markdown==3.5
 markdown-it-py==3.0.0
