--- a/requirements.txt
+++ b/requirements.txt
@@ -100,7 +100,7 @@ pytz==2023.3.post1
 pytzdata==2020.1
 PyYAML==5.4.1
 readchar==4.0.5
-referencing==0.30.2
+# referencing==0.30.2
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -124,7 +124,7 @@ termcolor==1.1.0
 text-unidecode==1.3
 toml==0.10.2
 tomlkit==0.12.3
-trio==0.22.2
+# trio==0.22.2
 trio-websocket==0.10.4
 typer==0.9.0
 typing_extensions==4.8.0
