--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,7 @@ numpy==1.26.1
 oauthlib==3.2.2
 openpyxl==3.1.2
 orjson==3.9.10
-outcome==1.2.0
+# outcome==1.2.0
 packaging==23.2
 pandas==2.1.2
 pathspec==0.11.2
