--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-# aenum==3.1.15
-# ai-api-client-sdk==1.28.0
-# ai-core-sdk==1.22.3
-# aiosqlite==0.19.0
-# alembic==1.12.1
-# annotated-types==0.6.0
-# anyio==3.7.1
-# apprise==1.6.0
-# asgi-lifespan==2.1.0
+aenum==3.1.15
+ai-api-client-sdk==1.28.0
+ai-core-sdk==1.22.3
+aiosqlite==0.19.0
+alembic==1.12.1
+annotated-types==0.6.0
+anyio==3.7.1
+apprise==1.6.0
+asgi-lifespan==2.1.0
 asgiref==3.7.2
 # astroid==2.11.7
 # asyncpg==0.28.0
