--- a/requirements.txt
+++ b/requirements.txt
@@ -8,44 +8,44 @@ anyio==3.7.1
 apprise==1.6.0
 asgi-lifespan==2.1.0
 asgiref==3.7.2
-# astroid==2.11.7
-# asyncpg==0.28.0
-# attrs==23.1.0
-# awscli==1.22.101
+astroid==2.11.7
+asyncpg==0.28.0
+attrs==23.1.0
+awscli==1.22.101
 boto3==1.21.46
 botocore==1.24.46
-# cachetools==5.3.2
+cachetools==5.3.2
 certifi==2023.7.22
-# cffi==1.15.1
+cffi==1.15.1
 charset-normalizer==3.2.0
-# click==8.0.4
-# cloudpickle==2.2.1
-# colorama==0.4.3
-# coolname==2.2.0
-# croniter==1.4.1
-# cryptography==41.0.3
-# dateparser==1.1.8
-# dill==0.3.7
+click==8.0.4
+cloudpickle==2.2.1
+colorama==0.4.3
+coolname==2.2.0
+croniter==1.4.1
+cryptography==41.0.3
+dateparser==1.1.8
+dill==0.3.7
 Django==4.2.4
-# django-cors-headers==4.3.1
-# dnspython==2.4.2
-# docker==6.1.3
-# docutils==0.15.2
-# email-validator==2.1.0.post1
-# et-xmlfile==1.1.0
-# exceptiongroup==1.1.3
-# fsspec==2023.10.0
+django-cors-headers==4.3.1
+dnspython==2.4.2
+docker==6.1.3
+docutils==0.15.2
+email-validator==2.1.0.post1
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+fsspec==2023.10.0
 gunicorn==21.2.0
-# google-auth==2.23.3
-# graphviz==0.20.1
-# greenlet==3.0.1
-# griffe==0.36.9
-# h11==0.14.0
-# h2==4.1.0
-# hpack==4.0.0
-# httpcore==0.18.0
-# httpx==0.25.0
-# hyperframe==6.0.1
+google-auth==2.23.3
+graphviz==0.20.1
+greenlet==3.0.1
+griffe==0.36.9
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.18.0
+httpx==0.25.0
+hyperframe==6.0.1
 idna==3.4
 # isort==5.13.2
 # jellyfish==0.11.2
