--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ Jinja2==3.1.2
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.19.1
+# jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
 lazy-object-proxy==1.10.0
@@ -119,7 +119,7 @@ sortedcontainers==2.4.0
 SQLAlchemy==2.0.22
 sqlparse==0.4.4
 starlette==0.27.0
-submit50==3.1.1
+# submit50==3.1.1
 tabulate==0.9.0
 termcolor==1.1.0
 text-unidecode==1.3
