--- a/requirements.txt
+++ b/requirements.txt
@@ -35,11 +35,11 @@ email-validator==2.1.0.post1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 fsspec==2023.10.0
-gunicorn==21.2.0
 google-auth==2.23.3
 graphviz==0.20.1
 greenlet==3.0.1
 griffe==0.36.9
+gunicorn==21.2.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -47,17 +47,18 @@ httpcore==0.18.0
 httpx==0.25.0
 hyperframe==6.0.1
 idna==3.4
+iniconfig==2.0.0
 isort==5.13.2
 jellyfish==0.11.2
 Jinja2==3.1.2
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
-# jsonschema==4.19.1
+jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
 lazy-object-proxy==1.10.0
-# # lib50==3.0.7
+lib50==3.0.7
 Mako==1.2.4
 Markdown==3.5
 markdown-it-py==3.0.0
@@ -70,7 +71,7 @@ numpy==1.26.1
 oauthlib==3.2.2
 openpyxl==3.1.2
 orjson==3.9.10
-# outcome==1.2.0
+outcome==1.2.0
 packaging==23.2
 pandas==2.1.2
 pathspec==0.11.2
@@ -79,7 +80,9 @@ petl==1.7.14
 pexpect==4.8.0
 Pillow==10.0.0
 platformdirs==4.1.0
+pluggy==1.3.0
 prefect==2.14.2
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pyasn1==0.5.0
@@ -92,16 +95,18 @@ pyhumps==3.8.0
 pylint==2.14.2
 pymssql==2.2.9
 pyodbc==5.0.1
-# pypiwin32==223
+pypiwin32==223
 PySocks==1.7.1
+pytest==7.4.4
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-slugify==8.0.1
 pytz==2023.3.post1
 pytzdata==2020.1
+pywin32==306
 PyYAML==5.4.1
 readchar==4.0.5
-# referencing==0.30.2
+referencing==0.30.2
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -119,13 +124,13 @@ sortedcontainers==2.4.0
 SQLAlchemy==2.0.22
 sqlparse==0.4.4
 starlette==0.27.0
-# submit50==3.1.1
+submit50==3.1.1
 tabulate==0.9.0
 termcolor==1.1.0
 text-unidecode==1.3
 toml==0.10.2
 tomlkit==0.12.3
-# trio==0.22.2
+trio==0.22.2
 trio-websocket==0.10.4
 typer==0.9.0
 typing_extensions==4.8.0
