--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ Pillow==10.0.0
 platformdirs==4.1.0
 pluggy==1.3.0
 prefect==2.14.2
-psycopg2==2.9.9
+# psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pyasn1==0.5.0
