--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ asgi-lifespan==2.1.0
 asgiref==3.7.2
 astroid==2.11.7
 asyncpg==0.28.0
-attrs==23.1.0
+# attrs==23.1.0
 # awscli==1.22.101
 boto3==1.21.46
 botocore==1.24.46
@@ -54,11 +54,11 @@ Jinja2==3.1.2
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.19.1
+# jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 # kubernetes==28.1.0
 lazy-object-proxy==1.10.0
-lib50==3.0.7
+# lib50==3.0.7
 Mako==1.2.4
 Markdown==3.5
 markdown-it-py==3.0.0
@@ -125,7 +125,7 @@ sortedcontainers==2.4.0
 SQLAlchemy==2.0.22
 sqlparse==0.4.4
 starlette==0.27.0
-submit50==3.1.1
+# submit50==3.1.1
 tabulate==0.9.0
 termcolor==1.1.0
 text-unidecode==1.3
