--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ croniter==1.4.1
 cryptography==41.0.3
 dateparser==1.1.8
 dill==0.3.7
+distlib==0.3.8
 Django==4.2.4
 django-cors-headers==4.3.1
 dnspython==2.4.2
@@ -34,6 +35,7 @@ docutils==0.15.2
 email-validator==2.1.0.post1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
+filelock==3.13.1
 fsspec==2023.10.0
 google-auth==2.23.3
 graphviz==0.20.1
@@ -103,9 +105,8 @@ python-dotenv==0.19.2
 python-slugify==8.0.1
 pytz==2023.3.post1
 pytzdata==2020.1
-# pywin32==306
-# pypiwin32<=223
-# PyYAML==5.3.1
+pywin32==306
+# PyYAML==5.4.1
 readchar==4.0.5
 referencing==0.30.2
 regex==2023.10.3
@@ -140,6 +141,7 @@ tzlocal==5.2
 ujson==5.8.0
 urllib3==1.26.18
 uvicorn==0.23.2
+virtualenv==20.25.0
 websocket-client==1.6.4
 websockets==11.0.3
 wget==3.2
