--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ pyhumps==3.8.0
 pylint==2.14.2
 pymssql==2.2.9
 pyodbc==5.0.1
-pypiwin32==223
+# pypiwin32==223
 PySocks==1.7.1
 pytest==7.4.4
 python-dateutil==2.8.2
