--- a/requirements.txt
+++ b/requirements.txt
@@ -141,6 +141,7 @@ tzlocal==5.2
 ujson==5.8.0
 urllib3==1.26.18
 uvicorn==0.23.2
+vercel==0.2.1
 virtualenv==20.25.0
 websocket-client==1.6.4
 websockets==11.0.3
